# zip_split

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp  vcpkg.json
.github/workflows/: lukka_ci.yml
moor/: .gitignore  CMakeLists.txt
